# SCRWalk

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  rips-rw-visu.py  rips-rw.cpp  rips-rwint-visu.py  rips-rwint.cpp
laplacian/: CMakeLists.txt
laplacian/src/: laplacian.cpp  laplacian.h  laplacian_flint.cpp  laplacian_flint.h  laplacian_linbox.cpp
rw/: CMakeLists.txt
rw/python/: plots.py  utils.py
rw/src/: contourEdges.cpp  contourEdges.h  rwZ2chains.cpp  rwZchains.cpp  rwchains.h
